--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# migrations
+**/migrations/*.py
+**/migrations/*.pyc
+
 # Distribution / packaging
 .Python
 build/
